WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
70920
[Qt][WK2]Content size changed event does not require viewport attribute calculation.
https://bugs.webkit.org/show_bug.cgi?id=70920
Summary
[Qt][WK2]Content size changed event does not require viewport attribute calcu...
alan
Reported
2011-10-26 07:13:45 PDT
[Qt][WK2]Content size changed event does not require viewport attribute calculation.
Attachments
Patch
(1.28 KB, patch)
2011-10-26 07:25 PDT
,
alan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2011-10-26 07:25:01 PDT
Created
attachment 112502
[details]
Patch
WebKit Review Bot
Comment 2
2011-10-26 09:32:07 PDT
Comment on
attachment 112502
[details]
Patch Rejecting
attachment 112502
[details]
from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '-..." exit_code: 2 Last 500 characters of output: 1f13515385a678b79ee9855c04a857d3d
r98480
= 7a85a3e311a21844468fbfc1df9cf070860d33c6
r98481
= ae65fe3ba9800ff2b9fbdebca08f9c8d01c0c3c6
r98482
= 303d562d42288f40c90c2a93cd2f6541ad0f5e34 Done rebuilding .git/svn/refs/remotes/origin/master/.rev_map.268f45cc-cd09-0410-ab3c-d52691b4dbfc RA layer request failed: OPTIONS of '
http://svn.webkit.org/repository/webkit
': timed out waiting for server (
http://svn.webkit.org
) at /usr/lib/git-core/git-svn line 2295 Died at Tools/Scripts/update-webkit line 157. Full output:
http://queues.webkit.org/results/10208788
WebKit Review Bot
Comment 3
2011-10-27 06:06:01 PDT
Comment on
attachment 112502
[details]
Patch Clearing flags on attachment: 112502 Committed
r98558
: <
http://trac.webkit.org/changeset/98558
>
WebKit Review Bot
Comment 4
2011-10-27 06:06:07 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug