[Qt][WK2]Content size changed event does not require viewport attribute calculation. https://bugs.webkit.org/show_bug.cgi?id=70920

Patch by Zalan Bujtas <zbujtas@gmail.com> on 2011-10-27
Reviewed by Kenneth Rohde Christiansen.

Remove unnecessary recalculation of viewport attributes.

* UIProcess/qt/QtTouchViewInterface.cpp:
(WebKit::QtTouchViewInterface::contentSizeChanged):

Canonical link: https://commits.webkit.org/87203@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@98558 268f45cc-cd09-0410-ab3c-d52691b4dbfc